--- a/SanStore/appsettings.json
+++ b/SanStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-7EQ71Q8\\SQLEXPRESS;Database=SanStoreEcommerce;Trusted_connection=True;TrustServerCertificate=True"
+  }
 }
