--- a/SanStore.Application/SanStore.Application.csproj
+++ b/SanStore.Application/SanStore.Application.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disableenabledisable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SanStore.Domain\SanStore.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
