--- a/SanStore.Infrastructure/SanStore.Infrastructure.csproj
+++ b/SanStore.Infrastructure/SanStore.Infrastructure.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\SanStore.Domain\SanStore.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
