--- a/SanStore/appsettings.json
+++ b/SanStore/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-7EQ71Q8\\SQLEXPRESS;Database=SanStoreEcommerce;Trusted_connection=True;TrustServerCertificate=True"
+  },
+
+  "JwtSettings": {
+    "Issuer": "SanStore",
+    "Audience": "SanstoreCustomer",
+    "Key": "this232my0394authen0-ticationcation-0432keyforJwt",
+    "DurationInMinute": "60"
   }
 }
