responce cach profile

--- a/SanStore/SanStore.Web.csproj
+++ b/SanStore/SanStore.Web.csproj
@@ -25,4 +25,9 @@
     <ProjectReference Include="..\SanStore.Infrastructure\SanStore.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\v2\" />
+    <Folder Include="Controllers\v1\" />
+  </ItemGroup>
+
 </Project>
