--- a/SanStore/SanStore.Web.csproj
+++ b/SanStore/SanStore.Web.csproj
@@ -16,6 +16,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
@@ -23,11 +25,6 @@
   <ItemGroup>
     <ProjectReference Include="..\SanStore.Application\SanStore.Application.csproj" />
     <ProjectReference Include="..\SanStore.Infrastructure\SanStore.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\v2\" />
-    <Folder Include="Controllers\v1\" />
   </ItemGroup>
 
 </Project>
